<resources>
    <string name="app_name">FitnessTrack</string>
    <string name="hello_world">Hello World!</string>
    <string name="msg_please_wait">Please wait...</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="register_coach">Register Coach Panel</string>
    <string name="register_student">Student Registration Panel</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="tc_no">TC No</string>
    <string name="date_of_birth_10_10_1991">Date of Birth (10.10.1991)</string>
    <string name="takvim">Calendar</string>
    <string name="employed_institution">Employed Institution</string>
    <string name="not_register">Not Register?</string>
    <string name="register">Register</string>
    <string name="application_condition">By creating an account, you agree to our Conditions of Use and Privacy Notice</string>
    <string name="role"> Are you doctor</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="healthy_running">Healthy Running</string>
    <string name="skipping_rope">Skipping Rope</string>
    <string name="inner_peace">Inner Peace</string>
    <string name="effective_sports_method">Effective Sports Method</string>
    <string name="healthy_running_answer">Healthy running is important to increase physical fitness, support cardiovascular health, and improve overall well-being. Regular running can boost endorphin release in the body, reducing stress and improving mood.</string>
    <string name="skipping_rope_answer">Skipping rope is important to increase cardiovascular endurance, improve muscle tone, and enhance coordination skills. Regularly skipping rope can keep the body active, support heart health, and elevate overall fitness level.</string>
    <string name="inner_peace_answer">Families inner peace is important for the development of healthy relationships, sharing love and understanding. Spending time together, strengthening communication, and solving problems together create harmony and happiness among family members.</string>
    <string name="effective_sports_method_answer">Determining the appropriate sports method for ourselves increases motivation and ensures the sustainability of sports. Choosing a sport that we are interested in and enjoy increases our desire to exercise regularly and is an important factor in maintaining a healthy lifestyle.</string>
    <string name="viewpager_rne_i_sayfa_ge_i_leri_yapabilirsiniz">ViewPager instance. You can make page transitions.</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login_panel">Sign in</string>
    <string name="please_click_on_the_relevant_image">Please Click on the Relevant Image for Registration</string>
    <string name="Close">Close</string>
    <string name="tedavi_icin_degil">"Everything for a Healthy Life "</string>
    <string name="bu_uygulamada_sunulan">The information presented in this application is for the individual to feel healthy, peaceful and happy.</string>
    <string name="retry">Settings</string>
    <string name="password">Password</string>
    <string name="email_address">E mail address</string>
    <string name="recover_password">Recover Password</string>
    <string name="username">Username</string>
    <string name="privacy_and_terms_of_use">I accept the Privacy and Terms of Use</string>
    <string name="username_is_required">Username is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="recover">Recover</string>
    <string name="cancel">Cancel</string>
    <string name="user_email_is_not_in_proper_format">User email is not in proper format</string>
    <string name="password_control">The password is not in the appropriate format</string>
    <string name="checkbox_not_selected_warning">Checkbox must be selected.</string>
    <string name="enter_personal_details">Enter Personal Details</string>
    <string name="your_name">Your name</string>
    <string name="your_address">Your address</string>
    <string name="calculate_your_body_mass_index">Calculate Your Body Mass Index</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="body_mass_index">Body mass index</string>
    <string name="choose_personal_details">Choose Personal Details</string>
    <string name="your_last_name">Your Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sexless">Sexless</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="your_passwords_do_not_match">Your passwords do not match</string>
    <string name="strOneCount">9</string>
    <string name="strEnterGroupName">Enter Group Name</string>
    <string name="a_password_reset_email_has_been_sent">A password reset email has been sent.</string>
    <string name="the_password_reset_email_could_not_be_sent">The password reset email could not be sent.</string>
    <string name="remember_me">Remember me</string>
    <string name="coach">Coach:</string>
    <string name="student_selection">Student Selection</string>
    <string name="addrees">"Address: "</string>
    <string name="date_of_birth">"Date of birth: "</string>
    <string name="height_global">"Height: "</string>
    <string name="weight_global">Weight</string>
    <string name="ok">Ok</string>
    <string name="entrainements">Workouts</string>
    <string name="reports">Reports</string>
    <string name="messages">Messages</string>
    <string name="membres">Members</string>
    <string name="Sign_out">Sign out</string>
    <string name="Settings">Settings</string>
    <string name="Added">Added!</string>
    <string name="imaginary_file_has_been_deleted">Your imaginary file has been deleted!</string>
    <string name="cancelled">Cancelled!</string>
    <string name="Are_you_sure">Are you sure?</string>
    <string name="Wont_be_able_to_recover_this_file">You will not include this file!</string>
    <string name="No_cancel_plx">No,cancel plx!</string>
    <string name="Yes_delete_it">Yes,add!</string>
    <string name="Your_imaginary_file_is_safe">Your imaginary file is safe</string>
    <string name="list_of_your_workouts">List of your workouts</string>
    <string name="Edit_Workout">Edit a Workout</string>
    <string name="New_Workout">New Workout</string>
    <string name="Start_training">Start Training</string>
    <string name="Group_Member_List">Group Member List</string>
    <string name="Members">Members</string>
    <string name="Add_Group">Add Group</string>
    <string name="Add_Member_to_Group">Add Member to Group</string>
    <string name="group_name">Group Name</string>
    <string name="enter_group_details">Enter Group Details</string>
    <string name="save_group_name">Save Group Name</string>
    <string name="loading">Loading...</string>
    <string name="add_students_to_group">Add Student(s) to Group</string>
    <string name="students_who_are_registered">Students who are not registered with a teacher appear in this list. If the list is empty, all students are assigned to coachs.</string>
    <string name="error">Error</string>
    <string name="error_occurred">Error occurred</string>
    <string name="warning">Warning</string>
    <string name="no_idle_students">No idle students, all students are registered with various coaches</string>
    <string name="send_a_message_to_your_team">Send a message to your team</string>
    <string name="existing_groups_are_listed_below">"Dear Coach, the existing Groups are listed below. "</string>
    <string name="education">Education</string>
    <string name="calendar">Calendar</string>
    <string name="student_teacherId_updated">Student coachId updated</string>
    <string name="failede_to_update_Student_coachId">Failed to update student coachId</string>
    <string name="student_added_to_teachers_studentIds">Student added to teacher\'s studentIds</string>
    <string name="failed_to_add_student_to_coachs_student_id_list">Failed to add student to coach\'s student ID list</string>
    <string name="training">Training</string>
    <string name="details_on_the_next_training">Details on the next training</string>
    <string name="invalid_user">Invalid User</string>
    <string name="date_of_birth_cannot_be_empty">Date of birth cannot be empty</string>
    <string name="select_a_valid_date_of_birth">Select a valid date of birth.</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="surname_cannot_be_empty">Surname cannot be empty</string>
    <string name="address_cannot_be_empty">Address cannot be empty</string>
    <string name="fail_to_add_data">Fail to add data</string>
    <string name="registration_completed_successfully">Registration completed successfully</string>
    <string name="student_list_empty">Student list is empty.</string>
    <string name="student_coachId_updated">Student coachId updated</string>
    <string name="failed_to_update_student_coachId">Failed to update student coachId</string>
    <string name="add_image">Add İmage</string>
    <string name="select_image_profile">Select Image Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_profile">Edit profile</string>
    <string name="biography">Biography</string>
    <string name="profile_update_process_was_completed">Profile update process was completed successfully.</string>
    <string name="an_unexpected_error_occurred">An unexpected error occurred</string>
    <string name="your_training_has_already_started">Your training has already started since:</string>
    <string name="you_have_no_next_training">You have no next training</string>
    <string name="add_task">Add Task</string>
    <string name="enter_task_details">Enter task details</string>
    <string name="add_task_to_group">Add task to group</string>
    <string name="tasks_for_selected_groups_are_listed_belows">Tasks for selected groups are listed below.</string>
    <string name="you_can_enter_other_information_about_the_task">You can enter other information about the task.</string>
    <string name="set_task_end_time">Set Task End Time</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="dear_coach_there_is_no_version_available_in_our_database">Dear coach, there is no version available in our database. Please add the group first.</string>
    <string name="there_are_no_groups_that_can_be_listed">There are no groups that can be listed.</string>
    <string name="look_over">Look Over</string>


</resources>
