<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="vertical"
        android:gravity="end">
        <ImageView
            android:id="@+id/iv_exit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_cancel"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
             />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/enter_personal_details"
        android:textSize="18dp"
        android:gravity="center_vertical|center_horizontal"
        android:fontFamily="@font/roboto_bold"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:padding="4dp"
        android:ems="10"
        android:textColor="@color/loginTextColor"
        android:background="@drawable/circular_darkgray"

        android:hint="@string/your_name" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:padding="4dp"
        android:ems="10"
        android:textColor="@color/loginTextColor"
        android:background="@drawable/circular_darkgray"
        android:hint="@string/your_last_name" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:padding="4dp"
        android:ems="10"
        android:textColor="@color/loginTextColor"
        android:background="@drawable/circular_darkgray"
        android:hint="@string/your_address"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_your_body_mass_index"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:gravity="center" />
        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/np_weight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:np_textSize="@dimen/text_size"
            app:np_selectedTextColor="@color/gradient_end_color"
            app:np_selectedTextSize="@dimen/selected_text_size"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:gravity="center" />
        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/np_height"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:np_textSize="@dimen/text_size"
            app:np_selectedTextColor="@color/gradient_end_color"
            app:np_selectedTextSize="@dimen/selected_text_size"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:gravity="center" />
        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/np_gender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:np_textSize="@dimen/text_size"
            app:np_selectedTextColor="@color/gradient_end_color"
            app:np_selectedTextSize="@dimen/selected_text_size"
            />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/save"
        android:layout_marginTop="20dp" />

</LinearLayout>