<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="15dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="12dp"
        android:padding="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/imageViewGender"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_male" />

                <TextView
                    android:id="@+id/textViewUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textViewAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addrees"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textViewBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_birth"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textViewHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height_global"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textViewWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_global"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/darker_gray" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imgAddStudent"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic__add"
                android:padding="10dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>