<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="vertical"
        android:gravity="end">
        <ImageView
            android:id="@+id/iv_exit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_cancel"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
             />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/enter_group_details"
        android:textSize="18dp"
        android:gravity="center_vertical|center_horizontal"
        android:fontFamily="@font/roboto_bold"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_group_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:padding="4dp"
        android:ems="10"
        android:textColor="@color/loginTextColor"
        android:background="@drawable/circular_darkgray"
        android:hint="@string/group_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/existing_groups_are_listed_below"
        android:textSize="18dp"
        android:justificationMode="inter_word"
        android:gravity="center_vertical|center_horizontal"
        android:fontFamily="@font/roboto_bold"
        android:textStyle="bold" />
    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/colorAccent" />
    <ListView
        android:id="@+id/list_existing_group"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:drawSelectorOnTop="true"
        android:headerDividersEnabled="true">
    </ListView>
    <Button
        android:id="@+id/btn_save_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/save_group_name"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

</LinearLayout>