<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="16dp"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="vertical"
        android:gravity="end">
        <ImageView
            android:id="@+id/iv_task_exit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_cancel"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/enter_task_details"
        android:textSize="18dp"
        android:gravity="center_vertical|center_horizontal"
        android:fontFamily="@font/roboto_bold"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/et_group_task_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:padding="4dp"
        android:ems="10"
        android:textColor="@color/loginTextColor"
        android:background="@drawable/circular_darkgray"
        android:hint="@string/add_task" />
    <EditText
        android:id="@+id/et_group_sub_task_information_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:padding="4dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLines="2"
        android:textColor="@color/loginTextColor"
        android:background="@drawable/circular_darkgray"
        android:hint="@string/you_can_enter_other_information_about_the_task" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="10dp"
        android:background="#F6F6F6">
    <Spinner
        style="@style/Widget.AppCompat.DropDownItem.Spinner"
        android:id="@+id/chooseGroup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_todo_list_deadline"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:drawableLeft="@android:drawable/ic_menu_my_calendar"
            />
        <Button
            android:id="@+id/btnSetTaskEnd"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_toRightOf="@id/tv_todo_list_deadline"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/circular_register_button"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/set_task_end_time"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="14sp" />
    </RelativeLayout>
    <TextView
        android:id="@+id/txChooseDateTask"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="null"
        android:textSize="18dp"
        android:justificationMode="inter_word"
        android:gravity="center_vertical|center_horizontal"
        android:fontFamily="@font/roboto_bold"
        android:textStyle="bold" />
    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tasks_for_selected_groups_are_listed_belows"
        android:textSize="18dp"
        android:justificationMode="inter_word"
        android:gravity="center_vertical|center_horizontal"
        android:fontFamily="@font/roboto_bold"
        android:textStyle="bold" />
    <View
        android:layout_marginTop="10dp"
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/colorAccent" />
    <ListView
        android:layout_marginTop="10dp"
        android:id="@+id/listViewTask"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_add_task_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/add_task_to_group"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"/>

</LinearLayout>